--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,8 @@ okhttp3 = "4.9.1"
 kapt = "1.9.23"
 navigationCompose = "2.7.7"
 hiltNavigationCompose = "1.2.0"
+generativeAi = "0.4.0"
+markdownText = "0.4.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -42,6 +44,8 @@ retrofit-converter-gson = { module = "com.squareup.retrofit2:converter-gson", ve
 okhttp = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp3" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
+google-generative-ai = { module = "com.google.ai.client.generativeai:generativeai", version.ref = "generativeAi" }
+markdown-text = { module = "com.github.jeziellago:compose-markdown", version.ref = "markdownText" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
