--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ navigationCompose = "2.7.7"
 hiltNavigationCompose = "1.2.0"
 generativeAi = "0.4.0"
 markdownText = "0.4.1"
+lottie = "6.4.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,6 +47,7 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavigationCompose" }
 google-generative-ai = { module = "com.google.ai.client.generativeai:generativeai", version.ref = "generativeAi" }
 markdown-text = { module = "com.github.jeziellago:compose-markdown", version.ref = "markdownText" }
+lottie = { module = "com.airbnb.android:lottie-compose", version.ref = "lottie" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
